--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ description: meta.description
           </div>
             <div class="spec-sheet">
             <label>{% t spec_address %}</label> 
-             <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+             <a target="_blank" rel="noreferrer" href="">Update will follow</a>
             <label>{% t spec_symbol %}</label>
              {% t spec_token_symbol %} 
             <label>{% t spec_decimal %}</label>
@@ -118,7 +118,7 @@ description: meta.description
           </div>
             <div class="spec-sheet">
             <label>{% t spec_address %}</label> 
-             <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+             <a target="_blank" rel="noreferrer" href="">Update will follow</a>
             <label>{% t spec_symbol %}</label>
              {% t spec_token_symbol %} 
             <label>{% t spec_decimal %}</label>
@@ -133,7 +133,7 @@ description: meta.description
           </div>
             <div class="spec-sheet">
             <label>{% t spec_address %}</label>
-             <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+             <a target="_blank" rel="noreferrer" href="">Update will follow</a>
             <label>{% t spec_symbol %}</label>
              {% t spec_token_symbol %}  
             <label>{% t spec_decimal %}</label>
@@ -148,7 +148,7 @@ description: meta.description
           </div>
             <div class="spec-sheet">
             <label>{% t spec_address %}</label>
-             <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+             <a target="_blank" rel="noreferrer" href="">Update will follow</a>
             <label>{% t spec_symbol %}</label>
              {% t spec_token_symbol %}  
             <label>{% t spec_decimal %}</label>
