--- a/index.html
+++ b/index.html
@@ -748,6 +748,14 @@ description: meta.description
         </div>
       </section>
 
+      <script>
+        if('serviceWorker' in navigator) {
+          navigator.serviceWorker
+                   .register('/sw.js')
+                   .then(function() { console.log("Service Worker Registered"); });
+        }
+        </script>
+
       <!-- Scripts -->
       {% include body_javascripts.html %}
 
