--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ description: meta.description
     <div id="wrapper">
 
       <!-- Initial panel -->
+      <div class="animated-border">
 
       <section class="panel banner left">
         <div class="content span-3-75" id="intro-structure">
@@ -34,8 +35,10 @@ description: meta.description
           <div class="small-text">Hydro Foundation</div>
         </div>
       </section>
+      </div>
 
       <!-- Ecosystem section -->
+      <div class="animated-border">
 
       <section class="panel">
         <div class="intro joined">
@@ -46,8 +49,11 @@ description: meta.description
           <img id="ecosystem-pic" src="assets/images/layers.png" alt="blockchain-layers" />
         </div>
       </section>
+    </div>
 
       <!--- Multichains section-->
+
+      <div class="animated-border">
 
       <section class="panel">
         <div class="intro joined">
@@ -83,12 +89,12 @@ description: meta.description
 
           <div class="eth-specs">
             <div class="center-pics">
-            <a href="https://ethereum.org/en/" target="_blank" rel="noreferrer"><img id="eth-logo" src="assets/images/eth.png" alt="eth-logo" /></a>
+            <a href="https://etherscan.io/token/0x946112efab61c3636cbd52de2e1392d7a75a6f01" target="_blank" rel="noreferrer"><img id="eth-logo" src="assets/images/eth.png" alt="eth-logo" /></a>
             <h5>{% t ethereum %}</h5>
           </div>
             <div class="spec-sheet">
             <label>{% t spec_address %}</label> 
-             <a target="_blank" rel="noreferrer" href="https://etherscan.io/address/0xebbdf302c940c6bfd49c6b165f457fdb324649bc">0xebbdf302c940c6bfd49c6b165f457fdb324649bc</a>
+             <a target="_blank" rel="noreferrer" href="https://etherscan.io/token/0x946112efab61c3636cbd52de2e1392d7a75a6f01">0x946112efab61c3636cbd52de2e1392d7a75a6f01</a>
             <label>{% t spec_symbol %}</label> 
              {% t spec_token_symbol %} 
             <label>{% t spec_decimal %}</label>
@@ -98,12 +104,12 @@ description: meta.description
 
           <div class="bsc-specs">
             <div class="center-pics">
-            <a href="https://www.binance.org/en/smartChain" target="_blank" rel="noreferrer"><img id="bsc-logo" src="assets/images/bsc.png" alt="bsc-logo" /></a>
+            <a href="https://bscscan.com/token/0xf3DBB49999B25c9D6641a9423C7ad84168D00071" target="_blank" rel="noreferrer"><img id="bsc-logo" src="assets/images/bsc.png" alt="bsc-logo" /></a>
             <h5>{% t binance_smart_chain %}</h5>
           </div>
             <div class="spec-sheet">
             <label>{% t spec_address %}</label> 
-             <a target="_blank" rel="noreferrer" href="">Update will follow</a>
+             <a target="_blank" rel="noreferrer" href="https://bscscan.com/token/0xf3DBB49999B25c9D6641a9423C7ad84168D00071">0xf3DBB49999B25c9D6641a9423C7ad84168D00071</a>
             <label>{% t spec_symbol %}</label>
              {% t spec_token_symbol %} 
             <label>{% t spec_decimal %}</label>
@@ -160,10 +166,13 @@ description: meta.description
         </div>
         </div>    
       </section>
+      </div>
 
       <!-- Protocol section -->
 
-      <section class="panel">
+      <div class="animated-border">
+
+      <section class="panel" >
         
         <div class="inner columns aligned" id="protocol-center">
           <div class="intro">
@@ -233,8 +242,10 @@ description: meta.description
 
         </div>
       </section>
+    </div>
 
       <!-- team section -->
+      <div class="animated-border">
 
       <section class="panel">
         <div class="intro">
@@ -465,8 +476,10 @@ description: meta.description
             </div>
           </div>
       </section>
+      </div>
 
       <!-- Roadmap section -->
+      <div class="animated-border">
 
       <section class="panel">
         <div class="intro">
@@ -634,8 +647,10 @@ description: meta.description
           </div>
         </div>
       </section>
+      </div>
 
         <!-- Exchanges & Partners section -->
+        <div class="animated-border">
 
       <section class="panel">
         <div class="intro" id="blog-structure" style="margin-top:-2rem; ">
@@ -720,8 +735,10 @@ description: meta.description
             </div>
           </div>
       </section>
+    </div>
 
       <!-- Social media section -->
+      <div class="animated-border">
 
       <section class="panel">
         <div class="intro">
@@ -748,6 +765,7 @@ description: meta.description
           </div>
         </div>
       </section>
+    </div>
 
       <!-- Scripts -->
       {% include body_javascripts.html %}
