--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ description: meta.description
               <p class="da-name">Saurav Kumar</p>
               <p class="da-position">{% t team_saurav %}</p>
               <div class="da-buttons">
-                <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/Sauravk12448765?s=09" aria-label="twitter">
+                <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/HydroSaurav" aria-label="twitter">
                   <i class="fab fa-twitter"></i></a>
                 <a class="button-da" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/saurav-kumar-77b60776/" aria-label="linkedin">
                   <i class="fab fa-linkedin"></i></a>
