--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ description: meta.description
               <div class="da-buttons">
                 <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/RaiMasamune" aria-label="twitter">
                   <i class="fab fa-twitter"></i></a>
-                <a class="button-da" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/ryanpena-13015215a/" aria-label="linkedin">
+                <a class="button-da" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/raipena/" aria-label="linkedin">
                   <i class="fab fa-linkedin"></i></a>
               </div>
             </div>
@@ -678,7 +678,7 @@ description: meta.description
           <div class="exchanges_column" id="exchange-column-2">
             <a href="https://mercatox.com/exchange/HYDRO/BTC" target="_blank" rel="noreferrer">
               <img class="exchange-pic" src="assets/images/exchanges/mercatox.png" alt="mercatox" /></a>
-            <a href="https://app.uniswap.org/#/swap?outputCurrency=0xebbdf302c940c6bfd49c6b165f457fdb324649bc" target="_blank" rel="noreferrer">
+            <a target="_blank" rel="noreferrer">
               <img class="exchange-pic" src="assets/images/exchanges/uniswap.png" alt="uniswap" /></a>
             <a href="https://www.bitmart.com/trade/en?symbol=HYDRO_BTC" target="_blank" rel="noreferrer">
               <img class="exchange-pic" src="assets/images/exchanges/bitmart.png" alt="bitmart" /></a>
@@ -753,7 +753,7 @@ description: meta.description
             <ul class="contact-icons">
               <li class="icon brands fa-telegram transparent-icon" onclick="location.href='https://t.me/projecthydro'" target="_blank" rel="noreferrer"></li>
               <li class="icon brands fa-twitter transparent-icon" onclick="location.href='https://twitter.com/HydroBlockchain'" target="_blank" rel="noreferrer"></li>
-              <li class="icon brands fa-medium transparent-icon" onclick="https://medium.com/@ProjectHydro'" target="_blank" rel="noreferrer"></li>
+              <li class="icon brands fa-medium transparent-icon" onclick="https://projecthydro.medium.com'" target="_blank" rel="noreferrer"></li>
               <li class="icon brands fa-linkedin transparent-icon" onclick="location.href='https://www.linkedin.com/company/hydroblockchain'" target="_blank" rel="noreferrer"></li>
             </ul>
             <ul class="contact-icons">
