--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ description: meta.description
               <p class="da-name">Phi Quang</p>
               <p class="da-position">{% t team_phi %}</p>
               <div class="da-buttons">
-                <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/phi04436175" aria-label="twitter">
+                <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/Zunnyzx" aria-label="twitter">
                   <i class="fab fa-twitter"></i></a>
                 <a class="button-da" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/bqphi1210" aria-label="linkedin">
                   <i class="fab fa-linkedin"></i></a>
@@ -678,8 +678,8 @@ description: meta.description
           <div class="exchanges_column" id="exchange-column-2">
             <a href="https://mercatox.com/exchange/HYDRO/BTC" target="_blank" rel="noreferrer">
               <img class="exchange-pic" src="assets/images/exchanges/mercatox.png" alt="mercatox" /></a>
-            <a target="_blank" rel="noreferrer">
-              <img class="exchange-pic" src="assets/images/exchanges/uniswap.png" alt="uniswap" /></a>
+            <!-- <a target="_blank" rel="noreferrer">
+              <img class="exchange-pic" src="assets/images/exchanges/uniswap.png" alt="uniswap" /></a> -->
             <a href="https://www.bitmart.com/trade/en?symbol=HYDRO_BTC" target="_blank" rel="noreferrer">
               <img class="exchange-pic" src="assets/images/exchanges/bitmart.png" alt="bitmart" /></a>
             <a href="https://idex.market/eth/hydro" target="_blank" rel="noreferrer">
