fix broken link

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@ description: meta.description
             <ul class="contact-icons">
               <li class="icon brands fa-telegram transparent-icon" onclick="location.href='https://t.me/projecthydro'" target="_blank" rel="noreferrer"></li>
               <li class="icon brands fa-twitter transparent-icon" onclick="location.href='https://twitter.com/HydroBlockchain'" target="_blank" rel="noreferrer"></li>
-              <li class="icon brands fa-medium transparent-icon" onclick="https://projecthydro.medium.com'" target="_blank" rel="noreferrer"></li>
+              <li class="icon brands fa-medium transparent-icon" onclick="location.href='https://projecthydro.medium.com'" target="_blank" rel="noreferrer"></li>
               <li class="icon brands fa-linkedin transparent-icon" onclick="location.href='https://www.linkedin.com/company/hydroblockchain'" target="_blank" rel="noreferrer"></li>
             </ul>
             <ul class="contact-icons">
