--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@ description: meta.description
 </head>
 
 <body class="is-preload">
-  <div class="alert">
-    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    Caution! Do not trade the old Hydro contract at Uniswap!
-  </div>
 
+  <!-- Warning -->
+  <div class="alert">    
+    <div class="alert_text"><div id="warning_alert">Warning!</div> Do not trade the old Hydro contract on Uniswap!</div>
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+  </div>
   
   <div id="page-wrapper">
     <div class="hideDesktop">
