--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ description: meta.description
 <body class="is-preload">
 
   <!-- Warning -->
-  <div class="center_alert">
+  <div class="center_alert" id="center_alert">
   <div class="alert">    
     <div class="alert_text"><div id="warning_alert">Warning!</div> Do not trade the old Hydro contract on Uniswap!</div>
-    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    <span class="closebtn" onclick="this.parentElement.style.display='none', changeZIndex(0, 'center_alert')">&times;</span>
   </div>
 </div>
   
