--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ description: meta.description
       <div class="animated-border">
 
       <section class="panel">
-        <div class="intro joined">
+        <div class="intro joined" id="multichain-initial">
           <h2>{% t multichains_title %}</h2>
           <p>{% t multichains_subline %}</p>
         </div>
@@ -663,9 +663,9 @@ description: meta.description
         <div class="animated-border">
 
       <section class="panel">
-        <div class="intro" id="blog-structure" style="margin-top:-2rem; ">
-          <h3><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer"
-              style="padding-left:1rem;">{% t blog_title %}</a></h3>
+        <div class="intro" id="blog-structure">
+          <h2><a href="https://projecthydro.org/blog" target="_blank" rel="noreferrer"
+              style="padding-left:1rem;">{% t blog_title %}</a></h2>
           <br>
           <span id="blog-feed">{% t loading %}</span> <br>
         </div>
