--- a/index.html
+++ b/index.html
@@ -335,15 +335,15 @@ description: meta.description
                 </div>
               </div>
               <div class="da-member">
-                <img class="da-pic" alt="srinivas_ratnam" src="assets/images/da-team/srinivas.png" />
-                <p class="da-name">Srinivas Ratnam</p>
-                <p class="da-position">{% t team_srinivas %}</p>
+                <img class="da-pic" alt="ayushya_chitransh" src="assets/images/da-team/ayushya.png" />
+                <p class="da-name">Ayushya Chitransh</p>
+                <p class="da-position">{% t team_ayu %}</p>
                 <div class="da-buttons">
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://github.com/cnusrini"
+                  <a class="button-da" target="_blank" rel="noreferrer" href="https://github.com/AyushyaChitransh"
                     aria-label="github">
                     <i class="fab fa-github"></i></a>
                   <a class="button-da" target="_blank" rel="noreferrer"
-                    href="https://www.linkedin.com/in/srinivas-ratnam-3aba9b87/" aria-label="linkedin">
+                    href="https://www.linkedin.com/in/ayushya-chitransh/" aria-label="linkedin">
                     <i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
@@ -392,6 +392,23 @@ description: meta.description
                     <i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
+
+              <div class="da-member">
+                <img class="da-pic" alt="srinivas_ratnam" src="assets/images/da-team/srinivas.png" />
+                <p class="da-name">Srinivas Ratnam</p>
+                <p class="da-position">{% t team_srinivas %}</p>
+                <div class="da-buttons">
+                  <a class="button-da" target="_blank" rel="noreferrer" href="https://github.com/cnusrini"
+                    aria-label="github">
+                    <i class="fab fa-github"></i></a>
+                  <a class="button-da" target="_blank" rel="noreferrer"
+                    href="https://www.linkedin.com/in/srinivas-ratnam-3aba9b87/" aria-label="linkedin">
+                    <i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="da-team-column">
               <div class="da-member">
                 <img class="da-pic" alt="rai_masamune" src="assets/images/da-team/rai.png" />
                 <p class="da-name">Ryan Cañeba Peña</p>
@@ -402,6 +419,19 @@ description: meta.description
                     <i class="fab fa-twitter"></i></a>
                   <a class="button-da" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/raipena/"
                     aria-label="linkedin">
+                    <i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="da-member">
+                <img class="da-pic" alt="dell_o" src="assets/images/da-team/dell.png" />
+                <p class="da-name">Dell O</p>
+                <p class="da-position">{% t team_dell %}</p>
+                <div class="da-buttons">
+                  <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/DellMember"
+                    aria-label="twitter">
+                    <i class="fab fa-twitter"></i></a>
+                  <a class="button-da" target="_blank" rel="noreferrer"
+                    href="https://www.linkedin.com/in/dell-o-8324b6131" aria-label="linkedin">
                     <i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
@@ -449,52 +479,7 @@ description: meta.description
                     aria-label="linkedin">
                     <i class="fab fa-linkedin"></i></a>
                 </div>
-              </div>
-              <div class="da-member">
-                <img class="da-pic" alt="dell_o" src="assets/images/da-team/dell.png" />
-                <p class="da-name">Dell O</p>
-                <p class="da-position">{% t team_dell %}</p>
-                <div class="da-buttons">
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/DellMember"
-                    aria-label="twitter">
-                    <i class="fab fa-twitter"></i></a>
-                  <a class="button-da" target="_blank" rel="noreferrer"
-                    href="https://www.linkedin.com/in/dell-o-8324b6131" aria-label="linkedin">
-                    <i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="da-team-column">
-              <div class="da-member">
-                <img class="da-pic" alt="ayushya_chitransh" src="assets/images/da-team/ayushya.png" />
-                <p class="da-name">Ayushya Chitransh</p>
-                <p class="da-position">{% t team_ayu %}</p>
-                <div class="da-buttons">
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://github.com/AyushyaChitransh"
-                    aria-label="github">
-                    <i class="fab fa-github"></i></a>
-                  <a class="button-da" target="_blank" rel="noreferrer"
-                    href="https://www.linkedin.com/in/ayushya-chitransh/" aria-label="linkedin">
-                    <i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="da-member">
-                <img class="da-pic" alt="aljhon_manticahon" src="assets/images/da-team/aljhon.png" />
-                <p class="da-name">AIjhon Manticahon</p>
-                <p class="da-position">{% t team_aijhon %}</p>
-                <div class="da-buttons">
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/aljhon1122?s=09"
-                    aria-label="twitter">
-                    <i class="fab fa-twitter"></i></a>
-                  <a class="button-da" target="_blank" rel="noreferrer"
-                    href="https://www.linkedin.com/in/aljhon-manticahon-8b342315a/" aria-label="linkedin">
-                    <i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="da-team-column">
+              </div>              
               <div class="da-member">
                 <img class="da-pic" alt="marlo_villaos" src="assets/images/da-team/marlo.png" />
                 <p class="da-name">Marlo Villaos</p>
@@ -506,19 +491,6 @@ description: meta.description
                     <i class="fab fa-twitter"></i></a>
                   <a class="button-da" target="_blank" rel="noreferrer"
                     href="https://www.linkedin.com/in/marlo-villaos-8330051b7/" aria-label="linkedin">
-                    <i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="da-member">
-                <img class="da-pic" alt="murphy" src="assets/images/da-team/murphy.png" />
-                <p class="da-name">Usifo Murphy</p>
-                <p class="da-position">{% t team_murphy %}</p>
-                <div class="da-buttons">
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://twitter.com/druids01"
-                    aria-label="twitter">
-                    <i class="fab fa-twitter"></i></a>
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://linkedin.com/in/Usifo-Murphy"
-                    aria-label="linkedin">
                     <i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
@@ -790,16 +762,21 @@ description: meta.description
                 <img class="partner-pic" src="assets/images/partners/tusc.png" alt="tusc" /></a>
               <a href="https://ethernity.live/en/" target="_blank" rel="noreferrer">
                 <img class="partner-pic" src="assets/images/partners/ethernity.png" alt="ethernity" /></a>
+              
+            </div>
+
+            <div class="partner_column" id="second_column">
               <a href="https://twitter.com/bloceducare" target="_blank" rel="noreferrer">
                 <img class="partner-pic" src="assets/images/partners/bloceducare.png" alt="bloceducare" /></a>
               <a href="https://www.emedchain.com/" target="_blank" rel="noreferrer">
                 <img class="partner-pic" src="assets/images/partners/emedchain.png" alt="emedchain" /></a>
+                <a href="https://www.emedchain.com/" target="_blank" rel="noreferrer">
+                  <img class="partner-pic" src="assets/images/partners/OpenDeFI.png" alt="emedchain" /></a>
             </div>
+
             <div class="inner columns aligned" id="partner-structure">
-              <div class="partner_column">
+              <div class="partner_column" id="third_column">
                 <h3>{% t partners_media_title %}</h3>
-                <a href="https://coinnewsextra.com/" target="_blank" rel="noreferrer">
-                  <img class="partner-pic" src="assets/images/partners/coinnewsextra.png" alt="coinnewsextra" /></a>
                 <a href="https://cryptonewsnet.com/" target="_blank" rel="noreferrer">
                   <img class="partner-pic" src="assets/images/partners/coinnewsnet.png" alt="cryptonewsnet" /></a>
               </div>
@@ -839,7 +816,7 @@ description: meta.description
             <h2>{% t dappstore_title %}</h2>
             <p>{% t dappstore_subline %}</p><br>
             <a href="https://snowflakestore.org" target="_blank" rel="noreferrer" class="button">Snowflake Store</a><br>
-            <a href="https://aegirwallet.org" target="_blank" rel="noreferrer" class="button">AegirWallet</a><br>
+            <a href="https://play.google.com/store/apps/details?id=com.aegirwallet" target="_blank" rel="noreferrer" class="button">AegirWallet</a><br>
             <a onclick="overlayDocs()" class="button">{% t documentation_title %}</a>
           </div>
           <div class="inner columns divided" id="footer-structure">
