--- a/index.html
+++ b/index.html
@@ -770,8 +770,8 @@ description: meta.description
                 <img class="partner-pic" src="assets/images/partners/bloceducare.png" alt="bloceducare" /></a>
               <a href="https://www.emedchain.com/" target="_blank" rel="noreferrer">
                 <img class="partner-pic" src="assets/images/partners/emedchain.png" alt="emedchain" /></a>
-                <a href="https://www.emedchain.com/" target="_blank" rel="noreferrer">
-                  <img class="partner-pic" src="assets/images/partners/OpenDeFI.png" alt="emedchain" /></a>
+                <a href="https://opendefi.finance/" target="_blank" rel="noreferrer">
+                  <img class="partner-pic" src="assets/images/partners/OpenDeFI.png" alt="opendefi" /></a>
             </div>
 
             <div class="inner columns aligned" id="partner-structure">
