--- a/index.html
+++ b/index.html
@@ -439,35 +439,6 @@ description: meta.description
 
             <div class="da-team-column">
               <div class="da-member">
-                <img class="da-pic" alt="naveen_gabriel" src="assets/images/da-team/naveen.png" />
-                <p class="da-name">Naveen Gabriel</p>
-                <p class="da-position">{% t team_naveen %}</p>
-                <div class="da-buttons">
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://github.com/jey07"
-                    aria-label="github">
-                    <i class="fab fa-github"></i></a>
-                  <a class="button-da" target="_blank" rel="noreferrer"
-                    href="https://www.linkedin.com/in/naveen-gabriel/" aria-label="linkedin">
-                    <i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="da-member">
-                <img class="da-pic" alt="mathew_george" src="assets/images/da-team/mathew.png" />
-                <p class="da-name">Mathew George</p>
-                <p class="da-position">{% t team_mathew %}</p>
-                <div class="da-buttons">
-                  <a class="button-da" target="_blank" rel="noreferrer" href="https://github.com/deepumat"
-                    aria-label="github">
-                    <i class="fab fa-github"></i></a>
-                  <a class="button-da" target="_blank" rel="noreferrer"
-                    href="https://www.linkedin.com/in/mathew-george-a54111105/" aria-label="linkedin">
-                    <i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="da-team-column">
-              <div class="da-member">
                 <img class="da-pic" alt="phi_quang" src="assets/images/da-team/sunny.png" />
                 <p class="da-name">Phi Quang</p>
                 <p class="da-position">{% t team_phi %}</p>
@@ -494,6 +465,35 @@ description: meta.description
                     <i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
+            </div>
+
+            <div class="da-team-column">
+              <div class="da-member">
+                <img class="da-pic" alt="bogdan_pavlyuchenkov" src="assets/images/da-team/bogdan.png" />
+                <p class="da-name">Bogdan Pavlyuchenkov</p>
+                <p class="da-position">{% t team_bogdan %}</p>
+                <div class="da-buttons">
+                  <a class="button-da" target="_blank" rel="noreferrer" href=""
+                    aria-label="github">
+                    <i class="fab fa-github"></i></a>
+                  <a class="button-da" target="_blank" rel="noreferrer"
+                    href="https://www.linkedin.com/in/bogdan-p/" aria-label="linkedin">
+                    <i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="da-member">
+                <img class="da-pic" alt="yash_srivastava" src="assets/images/da-team/yash.png" />
+                <p class="da-name">Yash Srivastava</p>
+                <p class="da-position">{% t team_yash %}</p>
+                <div class="da-buttons">
+                  <a class="button-da" target="_blank" rel="noreferrer" href="https://mobile.twitter.com/YashSri71153786"
+                    aria-label="twitter">
+                    <i class="fab fa-twitter"></i></a>
+                  <a class="button-da" target="_blank" rel="noreferrer"
+                    href="https://www.linkedin.com/mwlite/in/yash-srivastava-05b9b7211" aria-label="linkedin">
+                    <i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>            
             </div>
         </section>
       </div>
