remove particle.js to improve perfomance

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ description: meta.description
           </div>
 
 
-          <div id="particles-js">
+          <div>
             <div class="blockchain-specs">
               <div class="blockchains">
 
